# polyglot

./: BUILD.bazel  MODULE.bazel  Readme.md  Tiltfile  go.mod
bazel-microservices/: BUILD.bazel  MODULE.bazel  Tiltfile  package.json
bazel-microservices/deploy/chart/: BUILD.bazel  Chart.yaml  values.yaml
bazel-microservices/deploy/chart/templates/: deployment.yaml  service.yaml
bazel-microservices/services/service-a/: BUILD.bazel  index.js  values.yaml
bazel-microservices/services/service-b/: BUILD.bazel  index.js  values.yaml
deploy/chart/: BUILD.bazel  Chart.yaml  values.yaml
deploy/chart/templates/: deployment.yaml  service.yaml
services/gateway/: BUILD.bazel  envoy.yaml  values.yaml
services/service-a/: BUILD.bazel  index.js  values.yaml
services/service-b/: BUILD.bazel  index.js  values.yaml
services/service-c/: BUILD.bazel  main.go  values.yaml
