# ./MODULE.bazel
module(
    name = "bazel_microservices",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_helm", version = "0.22.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.14.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")
use_repo(go_sdk, go_sdk = "go_default_sdk")

# 2. Configure Gazelle to use your root go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull Envoy Image
oci.pull(
    name = "envoy_base",
    digest = "sha256:b3240ac100a3ccf2d4df6483f3b29130c793eb96b347c78511b57386afaa1140",
    image = "docker.io/envoyproxy/envoy:v1.34-latest",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "distroless_nodejs",
    digest = "sha256:8a3e96fe3345b5d83ecec2066e7c498139a02a6d1214e4f6c39f9ce359f3f5bc",
    image = "gcr.io/distroless/nodejs22-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
        "linux/arm/v7",
        "linux/s390x",
        "linux/ppc64le",
    ],
)

oci.pull(
    name = "distroless_go",
    image = "gcr.io/distroless/static-debian12",
    digest = "sha256:20bc6c0bc4d625a22a8fde3e55f6515709b32055ef8fb9cfbddaa06d1760f838",
    platforms = ["linux/amd64"],
)

use_repo(oci, "distroless_nodejs", "distroless_nodejs_linux_amd64", "distroless_nodejs_linux_arm64_v8", "distroless_nodejs_linux_arm_v7", "distroless_nodejs_linux_ppc64le", "distroless_nodejs_linux_s390x", "envoy_base", "envoy_base_linux_amd64", "distroless_go", "distroless_go_linux_amd64")
