# ./services/service-b/BUIL.bazel
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@rules_helm//helm:defs.bzl", "helm_template")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

js_binary(
    name = "app",
    data = ["//:node_modules/express"],
    entry_point = "index.js",
)

js_image_layer(
    name = "layers",
    binary = ":app",
    root = "/app",
)

oci_image(
    name = "image",
    base = "@distroless_nodejs",
    cmd = ["services/service-b/index.js"],
    tars = [":layers"],
    workdir = "/app/services/service-b/app.runfiles/_main",
)

oci_load(
    name = "load_docker",
    image = ":image",
    repo_tags = ["my-service-b:latest"],
)

oci_push(
    name = "push_registry",
    image = ":image",
    remote_tags = ["latest"],
    repository = "localhost:5000/my-service-b",
)

helm_template(
    name = "service-b",  # <-- This automatically becomes the Helm Release Name!
    chart = "//deploy/chart:microservice_chart",
    values = ["values.yaml"],
)
